added firebase realtime database for available meals

--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -5,6 +5,16 @@
   animation: meals-appear 1s ease-out forwards;
 }
 
+.mealsLoading {
+  text-align: center;
+  color: lightslategray;
+}
+
+.error {
+  text-align: center;
+  color: crimson;
+}
+
 .meals ul {
   list-style: none;
   margin: 0;
